[package]
name = "electrs"
version = "3.0.0-dev"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "An efficient re-implementation of Electrum Server in Rust"
license = "MIT"
homepage = "https://github.com/mempool/electrs"
repository = "https://github.com/mempool/electrs"
keywords = ["bitcoin", "electrum", "server", "index", "database"]
documentation = "https://docs.rs/electrs/"
readme = "README.md"
edition = "2018"

[features]
default = []
electrum-discovery = [ "electrum-client"]

[dependencies]
arrayref = "0.3.6"
base64 = "0.13.0"
bincode-do-not-use-directly = { version = "1.3.1", package = "bincode" }
bitcoin = { version = "0.28.2", features = [ "use-serde" ] }
bounded-vec-deque = "0.1.1"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
mp4 = "0.13.0"
bitcoincore-rpc = "0.16.0"
dirs = "4.0.0"
error-chain = "0.12.4"
glob = "0.3"
hex = "0.4.2"
itertools = "0.10"
lazy_static = "1.3.0"
libc = "0.2.81"
#log = "0.4.11"
socket2 = { version = "0.4", features = ["all"] }
num_cpus = "1.12.0"
page_size = "0.4.2"
prometheus = "0.13"
rayon = "1.5.0"
rocksdb = "0.21.0"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
sha2 = "0.10.7"
signal-hook = "0.3"
stderrlog = "0.5.0"
sysconf = ">=0.3.4"
time = { version = "0.3", features = ["formatting"] }
tiny_http = "0.11"
url = "2.2.0"
hyper = "0.14"
hyperlocal = "0.8"
# close to same tokio version as dependent by hyper v0.14 and hyperlocal 0.8 -- things can go awry if they mismatch
tokio = { version = "1", features = ["sync", "macros"] }
bip39 = "1.0.1"
chrono = "0.4.19"
regex = "1.6.0"
html-escaper = "0.2.0"
derive_more = "0.99.17"
anyhow = { version = "1.0.56", features = ["backtrace"] }
parking_lot = "0.12.1"
reqwest = "0.11.23"

tracing = "0.1.37"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
indicatif = "0.17.7"
tracing-indicatif = "0.3.6"

# optional dependencies for electrum-discovery
electrum-client = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[patch.crates-io.electrum-client]
git = "https://github.com/Blockstream/rust-electrum-client"
rev = "d3792352992a539afffbe11501d1aff9fd5b919d" # add-peer branch

[patch.crates-io]
bitcoin = { path="rust-bellscoin" }
